--- a/stylesheet/stylesheet.scss
+++ b/stylesheet/stylesheet.scss
@@ -1,7 +1,3 @@
-lineemotes.getStylesheet = function () {
-    var stylesheet = '';
-    
-    stylesheet += `
 #bda-qem-line-container {
     width: 346px;
     height: 327px;
@@ -9,36 +5,32 @@ lineemotes.getStylesheet = function () {
     font-weight: 800;
     color: #98aab6;
     background-color: #353535;
-}`;
-    
-    // styling the scroller so it looks consistent across the tabs
-    stylesheet += `
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar, 
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-track, 
+}
+
+// styling the scroller so it looks consistent across the tabs
+.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar,
+.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-track,
 .bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-track-piece {
     background-color: #303030 !important;
     border-color: #303030 !important;
 }
- 
+
 .bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-thumb {
     border-color: #202020 !important;
     background-color: #202020 !important;
-}`;
+}
 
-    // preventing overflow
-    stylesheet += `
+// preventing overflow
 #bda-qem-line-container .scroller-wrap {
     height: 100%;
-}`;
-    
-    // padding the inner container
-    stylesheet += `
+}
+
+// padding the inner container
 #bda-qem-line-container .emote-menu-inner {
     padding: 5px 15px 48px 15px;
-}`;
-    
-    // header for a sticker pack
-    stylesheet += `
+}
+
+// header for a sticker pack
 #bda-qem-line-container .line-pack-header {
     display: flex;
     color: #98aab6;
@@ -46,32 +38,29 @@ lineemotes.getStylesheet = function () {
     font-size: 12px;
     padding: 12px 0 12px 0;
     text-transform: uppercase;
-}`;
-    
-    // sizing stickers up from default 30x30
-    stylesheet += `
+}
+
+// sizing stickers up from default 30x30
 #bda-qem-line-container .emote-container {
     width: 71px;
     height: 71px;
-}`;
-    
-    // preview stylesheet
-    stylesheet += `
+}
+
+// preview stylesheet
 #bda-qem-line-container .preview-container .preview-wrapper {
-    position: absolute; 
+    position: absolute;
     width: 256px;
-    height: 358px; 
-    background: #353535; 
-    background-size: contain; 
-    border-top-left-radius: 3px; 
-    border-bottom-left-radius: 3px; 
-    box-shadow: -10px 0px 80px 0px rgba(0, 0, 0, 0.2); 
-    transform: translateX(-256px) translateY(-358px) translateZ(0px); 
-    transition: all .15s ease-in-out .15s; 
-}`;
-    
-    // categories stylesheet
-    stylesheet += `
+    height: 358px;
+    background: #353535;
+    background-size: contain;
+    border-top-left-radius: 3px;
+    border-bottom-left-radius: 3px;
+    box-shadow: -10px 0px 80px 0px rgba(0, 0, 0, 0.2);
+    transform: translateX(-256px) translateY(-358px) translateZ(0px);
+    transition: all .15s ease-in-out .15s;
+}
+
+// categories stylesheet
 #bda-qem-line-container .categories-container {
     position: absolute;
     width: 331px;
@@ -80,7 +69,7 @@ lineemotes.getStylesheet = function () {
     z-index: 1;
     margin-top: -44px;
     background-color: #353535;
-    border-top: 1px solid rgba(0,0,0,.1);   
+    border-top: 1px solid rgba(0,0,0,.1);
 }
 
 #bda-qem-line-container .categories-container .categories-wrapper {
@@ -88,19 +77,19 @@ lineemotes.getStylesheet = function () {
     overflow: hidden;
     white-space: nowrap;
 }
-    
+
 #bda-qem-line-container .categories-container .categories-wrapper .item:first-of-type {
     margin-left: 15px;
     margin-right: 0px;
 }
-    
+
 #bda-qem-line-container .categories-container .categories-wrapper .item:nth-child(2) {
     margin-left: 0px;
 }
 
 
-#bda-qem-line-container .categories-container .categories-wrapper .item:hover { 
-    filter: grayscale(0%); 
+#bda-qem-line-container .categories-container .categories-wrapper .item:hover {
+    filter: grayscale(0%);
 }
 
 #bda-qem-line-container .categories-container .categories-wrapper .item {
@@ -117,18 +106,17 @@ lineemotes.getStylesheet = function () {
     border-bottom: 3px solid transparent;
     filter: grayscale(100%);
     transition: filter .1s ease-in-out;
-}`;
+}
 
 
-    stylesheet += `
 #bda-qem-line-container .visible {
     opacity: 1 !important;
 }
-    
+
 #bda-qem-line-container .line-pack .line-editbar:hover {
     opacity: 1;
 }
-    
+
 #bda-qem-line-container .line-pack .line-editbar {
     float: right;
     display: flex;
@@ -144,7 +132,7 @@ lineemotes.getStylesheet = function () {
     opacity: 0.5;
     transition: opacity .1s ease-in-out .05s;
 }
-    
+
 #bda-qem-line-container .line-pack .line-editbar .item:hover {
     opacity: 1;
 }
@@ -176,7 +164,7 @@ lineemotes.getStylesheet = function () {
     display: inherit;
     margin: 0;
     transform: rotate(45deg);
-    filter: invert() grayscale(100%);
+    filter: invert(100%) grayscale(100%);
 }
 
 #bda-qem-line-container .icon-minus {
@@ -188,7 +176,7 @@ lineemotes.getStylesheet = function () {
     filter: grayscale(100%);
     margin: 11px 0 0 0;
 }
-        
+
 
 #bda-qem-line-container input:focus {
     box-shadow: 0px 2px 0px 0px;
@@ -206,7 +194,7 @@ lineemotes.getStylesheet = function () {
     font-weight: 800;
     text-transform: uppercase;
 }
-    
+
 #bda-qem-line-container .line-pack input {
     width: 100%;
 }
@@ -232,13 +220,13 @@ lineemotes.getStylesheet = function () {
 #bda-qem-line-container .add-form input:focus {
     border: none;
 }
-    
+
 #line-add-id {
 }
-    
+
 #line-add-length {
 }
-    
+
 #line-add-title {
 }
 
@@ -261,14 +249,14 @@ lineemotes.getStylesheet = function () {
     transition: opacity .1s ease-in-out .05s;
     z-index: 10;
 }
-    
+
 #bda-qem-line-container .box {
-    width: 100%; 
-    color: #98aab6; 
+    width: 100%;
+    color: #98aab6;
     text-align: center;
     transform: translateY(250%);
 }
-    
+
 #bda-qem-line-container .confirm .yes, #bda-qem-line-container .confirm .no {
     padding: 10px;
     text-transform: uppercase;
@@ -283,14 +271,11 @@ lineemotes.getStylesheet = function () {
 
 #bda-qem-line-container .confirm .no:hover {
     color: rgb(152, 170, 182);
-} 
-    
+}
+
 #bda-qem-line-container .line-add-button.invalid:hover {
-    background-color: #ad0000 !important; 
+    background-color: #ad0000 !important;
 }
 #bda-qem-line-container .line-add-button.valid:hover {
-    background-color: #15ad00 !important; 
+    background-color: #15ad00 !important;
 }
-`;
-    return `<style>${stylesheet}</style>`;
-};
