--- a/stylesheet/stylesheet.scss
+++ b/stylesheet/stylesheet.scss
@@ -1,191 +1,236 @@
-#bda-qem-line-container {
-    width: 346px;
-    height: 327px;
-    border-radius: 0 0 5px 5px;
-    font-weight: 800;
-    color: #98aab6;
+@import 'icons.scss';
+@import 'addform.scss';
+
+$text-color: #98aab6;
+$dark-border-color: #2b2b2b;
+
+.popout.bda-qme-te-hidden {
+  #bda-qem-twitch, #bda-qem-favourite {
+    display: none;
+  }
+}
+.popout.bda-qme-hidden.bda-qme-te-hidden {
+  #bda-qem {
+    display: none;
+  }
+  #bda-qem-line-container {
+    border-radius: 5px;
+  }
+}
+
+#bda-qem button {
+  // border-top: 1px solid #efefef;
+  box-shadow: #EFEFEF 1px 0 0 0;
+}
+
+#bda-qem-twitch,
+#bda-qem-favourite {
+  border-radius: unset;
+}
+#bda-qem-line {
+  border-radius: 5px 0 0 0;
+}
+
+// Dark styling
+// styling the emote menu so it looks consistent across the tabs
+// applies only when BetterDiscord Dark mode is enabled
+.bda-dark {
+  .emoji-picker {
+    border-color: $dark-border-color;
+    .search-bar {
+      border-radius: 0 4px 4px 0px;
+    }
+  }
+
+  #bda-qem {
+    border-bottom: 1px solid $dark-border-color !important;
+    button {
+      // border-top: unset;
+      box-shadow: $dark-border-color 1px 0 0 0;
+    }
+  }
+
+  #bda-qem-line-container {
     background-color: #353535;
+    border-color: $dark-border-color;
+
+    .scroller::-webkit-scrollbar,
+    .scroller::-webkit-scrollbar-track,
+    .scroller::-webkit-scrollbar-track-piece {
+      background-color: #303030 !important;
+      border-color: #303030 !important;
+    }
+
+    .scroller::-webkit-scrollbar-thumb {
+      border-color: #202020 !important;
+      background-color: #202020 !important;
+    }
+
+    .preview-container .preview-wrapper {
+      background-color: #353535;
+      border-color: $dark-border-color;
+    }
+
+    .confirm {
+      background-color: rgba(35, 35, 35, 0.8);
+    }
+
+    .add-pack {
+      opacity: 1;
+    }
+  }
 }
 
-// styling the scroller so it looks consistent across the tabs
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar,
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-track,
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-track-piece {
-    background-color: #303030 !important;
-    border-color: #303030 !important;
-}
+// have a full 1px border if the Line tab is the only one enabled
+.popout.bda-qme-hidden.bda-qme-te-hidden #bda-qem-line-container {
+  border-top-width: 1px; }
 
-.bda-dark #bda-qem-line-container .scroller::-webkit-scrollbar-thumb {
-    border-color: #202020 !important;
-    background-color: #202020 !important;
-}
+#bda-qem-line-container {
+  // width: 344px;
+  // height: 326px;
+  border-radius: 0 0 5px 5px;
+  font-weight: 800;
+  color: $text-color;
+  background-color: #fff;
+  border-width: 0px 1px 1px 1px;
+  border-style: solid;
+  border-color: hsla(0,0%,75%,.2);
 
-// preventing overflow
-#bda-qem-line-container .scroller-wrap {
+  // preventing overflow
+  .scroller-wrap {
     height: 100%;
-}
+  }
 
-// padding the inner container
-#bda-qem-line-container .emote-menu-inner {
+  // padding the inner container
+  .emote-menu-inner {
     padding: 5px 15px 48px 15px;
-}
+  }
 
-// header for a sticker pack
-#bda-qem-line-container .line-pack-header {
+  // header for a sticker pack
+  .line-pack-header {
     display: flex;
-    color: #98aab6;
+    color: $text-color;
     height: 12px;
     font-size: 12px;
     padding: 12px 0 12px 0;
     text-transform: uppercase;
-}
+  }
 
-// sizing stickers up from default 30x30
-#bda-qem-line-container .emote-container {
+  // sizing stickers up from default 30x30
+  .emote-container {
     width: 71px;
     height: 71px;
-}
+  }
 
-// preview stylesheet
-#bda-qem-line-container .preview-container .preview-wrapper {
+  // preview stylesheet
+  .preview-container .preview-wrapper {
     position: absolute;
     width: 256px;
-    height: 358px;
-    background: #353535;
+    height: calc(var(--bd-les-height) + var(--bd-les-offset));
+    // height: 356px;
+    background-color: #fff;
+    background-position: center center;
+    background-repeat: no-repeat;
     background-size: contain;
-    border-top-left-radius: 3px;
-    border-bottom-left-radius: 3px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: rgba(191, 191, 191, 0.2);
+    border-radius: 5px;
     box-shadow: -10px 0px 80px 0px rgba(0, 0, 0, 0.2);
-    transform: translateX(-256px) translateY(-358px) translateZ(0px);
+    transform: translateX(-258px) translateY(calc(0px - var(--bd-les-height) - var(--bd-les-offset) - var(--bd-les-border-offset))) translateZ(0px);
     transition: all .15s ease-in-out .15s;
-}
+  }
 
-// categories stylesheet
-#bda-qem-line-container .categories-container {
+  // categories stylesheet
+  .categories-container {
     position: absolute;
-    width: 331px;
-    bottom: 0;
+    width: calc(var(--bd-les-width) - 15px);
+    // width: 331px;
+    bottom: 1px;
     overflow: hidden;
     z-index: 1;
     margin-top: -44px;
-    background-color: #353535;
+    background-color: inherit;
     border-top: 1px solid rgba(0,0,0,.1);
-}
+    .categories-wrapper {
+      clear: right;
+      overflow: hidden;
+      white-space: nowrap;
 
-#bda-qem-line-container .categories-container .categories-wrapper {
-    clear: right;
-    overflow: hidden;
-    white-space: nowrap;
-}
+      .item:first-of-type {
+        margin-left: 15px;
+        margin-right: 0px;
+      }
 
-#bda-qem-line-container .categories-container .categories-wrapper .item:first-of-type {
-    margin-left: 15px;
-    margin-right: 0px;
-}
+      .item:nth-child(2) {
+        margin-left: 0px;
+      }
 
-#bda-qem-line-container .categories-container .categories-wrapper .item:nth-child(2) {
-    margin-left: 0px;
-}
+      .item:hover {
+        filter: grayscale(0%);
+      }
 
-
-#bda-qem-line-container .categories-container .categories-wrapper .item:hover {
-    filter: grayscale(0%);
-}
-
-#bda-qem-line-container .categories-container .categories-wrapper .item {
-    display: inline-block;
-    box-sizing: border-box;
-    cursor: pointer;
-    width: 28px;
-    height: 44px;
-    margin-right: 4px;
-    margin-left: 2.5px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 32px 32px;
-    border-bottom: 3px solid transparent;
-    filter: grayscale(100%);
-    transition: filter .1s ease-in-out;
-}
+      .item {
+        display: inline-block;
+        box-sizing: border-box;
+        cursor: pointer;
+        width: 28px;
+        height: 44px;
+        margin-right: 4px;
+        margin-left: 2.5px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: 32px 32px;
+        border-bottom: 3px solid transparent;
+        filter: grayscale(100%);
+        transition: filter .1s ease-in-out;
+      }
+    }
+  }
 
 
-#bda-qem-line-container .visible {
+
+  .visible {
     opacity: 1 !important;
-}
+  }
 
-#bda-qem-line-container .line-pack .line-editbar:hover {
-    opacity: 1;
-}
+  .line-pack {
+    input {
+      width: 100%;
+    }
 
-#bda-qem-line-container .line-pack .line-editbar {
-    float: right;
-    display: flex;
-    padding-top: 7px;
-    opacity: 0;
-    transition: opacity .1s ease-in-out;
-}
+    .line-editbar:hover {
+      opacity: 1;
+    }
 
-#bda-qem-line-container .line-pack .line-editbar .item {
-    display: inline-block;
-    width: 22px;
-    height: 22px;
-    opacity: 0.5;
-    transition: opacity .1s ease-in-out .05s;
-}
+    .line-editbar {
+      float: right;
+      display: flex;
+      padding-top: 7px;
+      opacity: 0;
+      transition: opacity .1s ease-in-out;
 
-#bda-qem-line-container .line-pack .line-editbar .item:hover {
-    opacity: 1;
-}
+      .item {
+        display: inline-block;
+        width: 22px;
+        height: 22px;
+        opacity: 0.5;
+        transition: opacity .1s ease-in-out .05s;
+      }
+      .item:hover {
+        opacity: 1;
+      }
+    }
+  }
 
-#bda-qem-line-container .line-pack .line-editbar .icon-edit {
-    display: inherit;
-    width: inherit;
-    height: inherit;
-    background-image: url(/assets/99d227db4a23596956637210e624d79b.png);
-    background-position: -528px -374px;
-    background-size: 924px 682px;
-    filter: grayscale(100%);
-    transform: rotate(90deg) scale(0.8);
-}
-
-
-
-#bda-qem-line-container .icon-plus {
-    width: 22px;
-    height: 22px;
-    background-image: url(/assets/99d227db4a23596956637210e624d79b.png);
-    background-position: -220px -484px;
-    background-size: 924px 682px;
-    filter: grayscale(100%);
-    margin: 11px 0 0 0;
-}
-
-#bda-qem-line-container .icon-plus-cross {
-    display: inherit;
-    margin: 0;
-    transform: rotate(45deg);
-    filter: invert(100%) grayscale(100%);
-}
-
-#bda-qem-line-container .icon-minus {
-    width: 22px;
-    height: 22px;
-    background-image: url(/assets/99d227db4a23596956637210e624d79b.png);
-    background-position: -242px -484px;
-    background-size: 924px 682px;
-    filter: grayscale(100%);
-    margin: 11px 0 0 0;
-}
-
-
-#bda-qem-line-container input:focus {
+  input:focus {
     box-shadow: 0px 2px 0px 0px;
     outline: none;
-}
+  }
 
-#bda-qem-line-container input {
-    color: #98aab6;
-    background-color: #353535;
+  input {
+    color: $text-color;
+    background-color: inherit;
     border: none;
     margin: 0;
     height: 12px;
@@ -193,89 +238,45 @@
     font-size: 12px;
     font-weight: 800;
     text-transform: uppercase;
-}
+  }
 
-#bda-qem-line-container .line-pack input {
-    width: 100%;
-}
 
-#bda-qem-line-container .add-form {
-    position: absolute;
-    bottom: 48px;
-    width: 301px;
-    transition: opacity .1s ease-in-out .05s;
-    background: #353535;
-    padding: 15px;
-    border-top: 1px solid rgba(0, 0, 0, .1);
-    text-transform: uppercase;
-}
+  .box {
+     width: 100%;
+     color: $text-color;
+     text-align: center;
+     transform: translateY(250%);
+   }
 
-#bda-qem-line-container .add-form input::-webkit-input-placeholder {
-    color: rgba(152, 170, 182, 0.5);
-}
-#bda-qem-line-container .add-form input {
-    border-bottom: solid 1px;
-    margin: 0;
-}
-#bda-qem-line-container .add-form input:focus {
-    border: none;
-}
-
-#line-add-id {
-}
-
-#line-add-length {
-}
-
-#line-add-title {
-}
-
-#bda-qem-line-container .categories-container .icon-triangle {
-    width: 22px;
-    height: 22px;
-    background-image: url(/assets/99d227db4a23596956637210e624d79b.png);
-    background-position: -858px -484px;
-    background-size: 924px 682px;
-    filter: hue-rotate(130deg);
-    float: right;
-    margin-right: 5px;
-}
-
-#bda-qem-line-container .confirm {
+  .confirm {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(35, 35, 35, 0.8);
+    background-color: rgba(255, 255, 255, 0.8);
     transition: opacity .1s ease-in-out .05s;
     z-index: 10;
-}
 
-#bda-qem-line-container .box {
-    width: 100%;
-    color: #98aab6;
-    text-align: center;
-    transform: translateY(250%);
-}
+    .yes, .no {
+      padding: 10px;
+      text-transform: uppercase;
+      cursor: pointer;
+      color: rgba(152, 170, 182, 0.8);
+      transition: color .1s ease-in-out .05s;
+    }
 
-#bda-qem-line-container .confirm .yes, #bda-qem-line-container .confirm .no {
-    padding: 10px;
-    text-transform: uppercase;
-    cursor: pointer;
-    color: rgba(152, 170, 182, 0.8);
-    transition: color .1s ease-in-out .05s;
-}
+    .yes:hover {
+      color: #ad0000
+    }
 
-#bda-qem-line-container .confirm .yes:hover {
-    color: #ad0000
-}
+    .no:hover {
+      color: rgb(152, 170, 182);
+    }
+  }
 
-#bda-qem-line-container .confirm .no:hover {
-    color: rgb(152, 170, 182);
-}
 
-#bda-qem-line-container .line-add-button.invalid:hover {
-    background-color: #ad0000 !important;
-}
-#bda-qem-line-container .line-add-button.valid:hover {
-    background-color: #15ad00 !important;
+  .add-pack {
+    opacity: 0.5;
+  }
+  
+
 }
