Seemingly stable version

--- a/css/addform.scss
+++ b/css/addform.scss
@@ -9,6 +9,7 @@
     padding: 15px;
     border-top: 1px solid rgba(0, 0, 0, .1);
     text-transform: uppercase;
+    background-color: #fff;
 
     .labels, .inputs {
       display: flex;
