--- a/templates/confirm.pug
+++ b/templates/confirm.pug
@@ -1,6 +1,6 @@
 div.confirm(style="opacity: 0; pointer-events: none")
   div.box
-    h3(style="padding: 10px;")= title
+    h3= title
     div
       span.yes= yes
       span.no= no
