Update scroller classes

--- a/templates/menu-container.pug
+++ b/templates/menu-container.pug
@@ -1,7 +1,7 @@
 div#bda-qem-line-container
-  div.scroller-wrap.fade
+  div.scrollerWrap-2lJEkd.scrollerFade-1Ijw5y
     != confirm
-    div.scroller
+    div.scroller-2FKFPG
       div.emote-menu-inner
         != stickers
   != preview
